--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,5 +8,8 @@
         "type": "image/x-icon"
       }
     ],
-    "start_url": "."
+    "display": "standalone",
+    "theme_color": "#000000",
+    "background_color": "#ffffff"
+  
   }
